@@ -7,6 +7,8 @@ Changes with APR-util 0.9.6
 
   *) Add a build script to create a solaris package. [Graham Leggett]
 
+  *) Add support for Berkeley DB 4.3.  [Jani Averbach <jaa jaa.iki.fi>]
+
 Changes with APR-util 0.9.5
 
   *) Guarantee and require default address alignment for block offsets
